# wavemetatools

./: .gitignore  .travis.yml  INSTALL  Makefile.am  NEWS  NEWS.md  README  README.md  autogen.sh  bootstrap.sh  configure.ac  configure.in
.github/workflows/: ci.yml
src/: Makefile.am  bsiwave_to_mpeg  bwfinfo.c  util.c  util.h  wavemetainfo.c  waveunwrap.c  wavewrap.c
