
AC_INIT(src/bwfinfo.c)
AM_CONFIG_HEADER(src/config.h)
AM_INIT_AUTOMAKE(bwftools, 0.1)


dnl ############## C Compiler Checks
AC_PROG_CC
AC_PROG_CXX
AC_C_BIGENDIAN
AC_C_CONST


dnl ############## Standard Header Files
AC_HEADER_STDC


dnl ############## Check for libid3
AC_SEARCH_LIBS(ID3Tag_Link,
	"id3" "id3 -lstdc++" "id3 -lz" "id3 -lz -lstdc++",
	,
	AC_MSG_ERROR(id3lib not found)
)


dnl ############## Type checks

AC_CHECK_TYPE(int32_t, long)
AC_CHECK_TYPE(u_int32_t, unsigned long)
AC_CHECK_TYPE(int16_t, short)
AC_CHECK_TYPE(u_int16_t, unsigned short)
AC_CHECK_TYPE(int8_t, char)
AC_CHECK_TYPE(u_int8_t, unsigned char)


dnl ############## Type checks

AC_OUTPUT([Makefile src/Makefile])

